[trading-server] feat: 지정가 포지션 청산 주문 지원
